Example images fixed

--- a/src/config/locales/en.json
+++ b/src/config/locales/en.json
@@ -133,7 +133,7 @@
               "p1": "Audiovisual producer graduated from the Lumière Film School. He worked as a director, screenwriter, and first assistant director on various nationally and internationally recognized film projects.",
               "p2": "As a director, he is developing the movie Volar. As a screenwriter, he worked on the films Perros (2017), Todas para uno (2014), De Rolling 2: Por el sueño mundialista (2014), De Rolling por Colombia (2013), and script advisor for the movie El Arriero (2009). He was also the director of additional units in the series Historia de un crimen: Caso Colmenares (2019) and assistant director in the series Hasta que la plata nos separe (2022), Perfil Falso (2023), Pa´ Quererte (2020), and Paraiso Travel (2018).",
               "p3": "As a first assistant director, he participated in projects such as Cien Años de Soledad (2022–2023), El olvido que seremos (2020), Distrito Salvaje (2018), Amalia la secretaria (2017), Corazón de León (2015), and others.",
-              "more": "Ver más"
+              "more": "See more"
             }
           },
           "felipe": {
