--- a/src/config/locales/en.json
+++ b/src/config/locales/en.json
@@ -15,7 +15,7 @@
   },
     "about_us": {
       "title": "about us",
-      "paragraph1": "<strong class=\"fw-bold\">Take Two Films</strong>, located in vibrant Bogotá, is more than just an audiovisual production company: it is a constantly evolving collective of creativity specializing in creating innovative content such as feature and short fiction films, as well as producing music videos and commercials.",
+      "paragraph1": "<strong class=\"fw-bold\">Take Two Films</strong>, located in vibrant Bogotá, is more than just an audiovisual production company; it is a constantly evolving collective of creativity specializing in creating innovative content such as feature and short fiction films, as well as producing music videos and commercials.",
       "paragraph2": "Founded in June 2015, our company covers all stages of production, from development, pre-production, production, and post-production at both national and international levels.",
       "paragraph3": "María Alejandra Delgado and Juan David Tobón, the founders and visionaries behind <strong class=\"fw-bold\">Take Two Films</strong>, bring over 20 years of experience in the audiovisual industry.",
       "paragraph4": "Their extensive experience in various productions has enriched <strong class=\"fw-bold\">Take Two Films</strong> with deep knowledge, complemented by the participation of young talents who make a great match when it comes to creating and producing in this new stage of the industry.",
@@ -157,9 +157,9 @@
           },
           "vale": {
             "bio": {
-              "p1": "Valentina Ciceri, a Social Communicator and Journalist. She graduated from Pontificia Bolivariana University and specializes in organizational and marketing communication.",
-              "p2": "My trademarks are creativity and empathy. I am passionate about creating captivating content, either graphic or audiovisual, especially for social media.",
-              "p3": "I have an insatiable desire to learn and an entrepreneurial spirit, mixed with a knack for teamwork, customer orientation, and creative problem-solving. I strive to stay updated with the latest trends and seek to innovate in every project I'm involved in."
+              "p1": "Valentina Ciceri is a Social Communicator and Journalist. She graduated from Pontificia Bolivariana University and specializes in organizational and marketing communication.",
+              "p2": "Her trademarks are creativity and empathy. She is passionate about creating captivating content, either graphic or audiovisual, especially for social media.",
+              "p3": "She has an insatiable desire to learn and an entrepreneurial spirit, mixed with a knack for teamwork, customer orientation, and creative problem-solving. She strives to stay updated with the latest trends and seek to innovate in every project she is involved in."
             }
           },
           "mario": {
