Corrected english locale

--- a/src/config/locales/en.json
+++ b/src/config/locales/en.json
@@ -69,7 +69,7 @@
       }
     },
     "services": {
-      "title": "servicios",
+      "title": "services",
       "description": {
         "p1": "We are a 100% Colombian company offering production services with a fresh and avant-garde approach to creating films, series, music videos, and advertising. Bound by Law 1556, part of the regulations for the audiovisual industry.",
         "p2": "In our team, we approach all aspects of audiovisual creation with a mint and innovative perspective. Our talented, professional, and creative team takes care of every stage: development, pre-production, production, and post-production.",
